attempted to fix light/dark mode toggle event listener and styling

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -25,3 +25,15 @@
 #back-button {
     align-self: center;
 }
+
+.container-dark {
+    background-color:#243447;
+    height: 100vh;
+    color: #bebebe;
+}
+
+.container-light {
+    background-color: #f0ead6;
+    color: black;
+    height: 100vh;
+}
